--- a/style.css
+++ b/style.css
@@ -1,52 +1,54 @@
-/* STRUCTURE */
-.header {
-	grid-area: head;
-
+img.graphic {
+	width: 17%;
+	margin: 2%;
+	border: 3px solid #143f85;
 }
 
-.navigation {
-	grid-area : navi;
+img.thumbnail {
+	width: 90%;
 }
 
-.content {
-	grid-area: cont;
-	background: powderblue;
+.square {
+  position: relative;
+  width: 17%;
+  margin: 2%;
+  float: left;
+  border: 3px solid black;
 }
 
-.footer {
-	grid-area: foot;
+.square:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+  background: #143f85;
 }
 
-div {
-	text-align: center;
+.insquare {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
-html {
-	height: 100%;
+p.title {
+	width: 100%;
+	background: darkslategrey;
+	color: powderblue;
+	font-size: 33px;
+	margin-top: 0px;
 }
 
-body {
-	height: 100%;
-	display: grid;
-	margin: 0;
-	background: #cfe8e7;
-	grid-template-areas:
-		'head head head head head head head head head head '
-		'navi  navi  navi  navi  navi  navi  navi navi  navi navi '
-		'cont  cont  cont  cont  cont  cont  cont cont  cont cont '
-		'cont  cont  cont  cont  cont  cont  cont cont  cont cont '
-		'cont  cont  cont  cont  cont  cont  cont cont  cont cont '
-		'cont  cont  cont  cont  cont  cont  cont cont  cont cont '
-		'cont  cont  cont  cont  cont  cont  cont cont  cont cont '
-		'cont  cont  cont  cont  cont  cont  cont cont  cont cont '
-		'cont  cont  cont  cont  cont  cont  cont cont  cont cont '
-		'foot foot foot foot foot foot foot foot foot foot ';
+p.desc {
+	width: 100%;
+	background: darkslategrey;
+	color: powderblue;
+	font-size: 22px;
+    margin-top: 20%;
 }
-
 /* NAVBAR */
 nav {
 	display: block;
 	background: darkslategrey;
+	padding: 1%;
 }
 
 nav a {
@@ -56,7 +58,7 @@ nav a {
 	text-decoration: none;
 	border: 1px solid black;
 	border-radius: 15px;
-	background: blue;
+	background: #143f85;
 	color: powderblue;
 }
 
@@ -68,7 +70,7 @@ nav a:hover {
 	border: 1px solid black;
 	border-radius: 15px;
 	background: powderblue;
-	color: blue;
+	color: #143f85;
 }
 
 /* HOMEPAGE */
@@ -120,14 +122,20 @@ img.panelcover {
 
 p.headblurb {
 	font-size: 20px;
-	font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+	font-family: 'Roboto', sans-serif;
+	width: 40%;
+	margin: auto;
+	padding: 1%;
 }
 
 /* ABOUT ME */
 
 
 /* PROJECTS */
-
+div.projects {
+	display: block;
+	margin: auto;
+}
 
 
 /* CONTACT */
